kubernetes/carwebsite/car.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car
  template:
    metadata:
      labels:
        app: car
    spec:
      containers:
      - name: car
        image: pramodprasanna/carwebsitelunch:1.0
        ports:
        - containerPort: 80
