kubernetes/carwebsite/carclusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: car
spec:
  selector:
    app: car
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      type: ClusterIP
