kubernetes/carwebsite/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: car
spec:
  selector:
    app: car
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30583  # Manually setting the NodePort in service file  not go and made change in edit svc
